--- a/index.html
+++ b/index.html
@@ -41,19 +41,18 @@
   <!-- Hero Section -->
   <section id="hero">
     <div class="hero-content hidden-scroll">
-      <h1 class="logo i18n-glitch" data-es="CONTENCIÓN:PSIQUIÁTRICO" data-en="CONTAINMENT:PSYCHIATRIC"
+      <h1 class="logo i18n-glitch" data-es="CONTENCIÓN:PSIQUIÁTRICO" data-en="PSYCHIATRIC:CONTAINMENT"
         data-text="CONTENCIÓN: PSIQUIÁTRICO">CONTENCIÓN:PSIQUIÁTRICO</h1>
       <p class="i18n"
         data-es="Sumérgete en una experiencia de terror donde el pánico es tu peor enemigo. Como investigador de turno, deberás monitorear las brechas de contención en un psiquiátrico abandonado. vigilante, metódico... y rápido."
-        data-en="Immerse yourself in a horror experience where panic is your worst enemy. As the duty investigator, you must monitor containment breaches in an abandoned asylum. Stay vigilant, methodical... and fast.">
+        data-en="Immerse yourself in a psychological horror experience where panic is your greatest enemy. As the investigator on duty, you must monitor containment breaches within an abandoned asylum. Stay vigilant, stay methodical... and survive.">
         Sumérgete en una experiencia de terror donde el pánico es tu peor enemigo. Como investigador de
         turno, deberás monitorear las brechas de contención en un psiquiátrico abandonado. vigilante, metódico... y
         rápido.
       </p>
       <div class="hero-btns">
-        <a href="https://forms.gle/S1Cbd5XdrAQvpEEp8" class="btn-primary i18n" data-es="BETA CERRADA"
-          data-en="BEGIN OPERATION">INICIAR
-          OPERACIÓN</a>
+        <a href="https://forms.gle/S1Cbd5XdrAQvpEEp8" class="btn-primary i18n" data-es="INICIAR OPERACIÓN"
+          data-en="BEGIN OPERATION">INICIAR OPERACIÓN</a>
       </div>
     </div>
   </section>
@@ -65,20 +64,20 @@
       <div class="lore-content">
         <p class="i18n"
           data-es="En el corazón de una zona marcada por extrañas fluctuaciones energéticas se alza el &quot;Colinas de Paz: Instituto Psiquiátrico&quot;. Lo que alguna vez fue un lugar de reposo se convirtió en el escenario de una tragedia inexplicable: un accidente devastador que cobró la vida de 24 inocentes."
-          data-en="In the heart of an area marked by strange energy fluctuations stands the 'Colinas de Paz: Psychiatric Institute.' What was once a place of rest became the scene of an inexplicable tragedy: a devastating accident that claimed the lives of 24 innocents.">
+          data-en="Deep within a region plagued by strange energy fluctuations stands the 'Colinas de Paz Psychiatric Institute.' Once a sanctuary for healing, it was transformed into the site of an inexplicable tragedy—a devastating event that claimed the lives of 24 innocent souls.">
           En el corazón de una zona marcada por extrañas fluctuaciones energéticas se alza el "Colinas de Paz: Instituto
           Psiquiátrico". Lo que alguna vez fue un lugar de reposo se convirtió en el escenario de una tragedia
           inexplicable: un accidente devastador que cobró la vida de 24 inocentes.
         </p>
         <p class="i18n"
           data-es="Como consecuencia directa de este suceso, el instituto se ha convertido en la zona cero de manifestaciones inexplicables y anomalías constantes que acechan en la oscuridad."
-          data-en="As a direct consequence of this event, the institute has become ground zero for constant inexplicable manifestations and anomalies that lurk in the darkness.">
+          data-en="In the aftermath of this disaster, the institute has become ground zero for constant, inexplicable manifestations and anomalies that haunt the darkness.">
           Como consecuencia directa de este suceso, el instituto se ha convertido en la zona cero de manifestaciones
           inexplicables y anomalías constantes que acechan en la oscuridad.
         </p>
         <p class="i18n"
           data-es="Como guardia de seguridad recién contratado, tu deber va más allá de patrullar pasillos oscuros. Tu misión principal es supervisar el &quot;Estabilizador de Ectoplasma&quot;, una tecnología experimental diseñada para contener la energía espiritual y mantener a raya las apariciones. En el silencio de la noche, deberás asegurar que el sistema funcione correctamente y, sobre todo, sobrevivir a lo que acecha en las sombras de Colinas de Paz."
-          data-en="As a newly hired security guard, your duty goes beyond patrolling dark hallways. Your primary mission is to oversee the 'Ectoplasm Stabilizer,' an experimental technology designed to contain spiritual energy and keep apparitions at bay. In the silence of the night, you must ensure the system functions correctly and, above all, survive what lurks in the shadows of Colinas de Paz.">
+          data-en="As a newly hired security officer, your duties extend far beyond patrolling dark corridors. Your primary objective is to manage the 'Ectoplasm Stabilizer'—experimental technology engineered to contain spiritual energy and suppress apparitions. In the dead of night, you must ensure system stability and, above all, survive what lurks within the shadows of Colinas de Paz.">
           Como guardia de seguridad recién contratado, tu deber va más allá de patrullar pasillos oscuros. Tu misión
           principal es supervisar el "Estabilizador de Ectoplasma", una tecnología experimental diseñada para contener
           la energía espiritual y mantener a raya las apariciones. En el silencio de la noche, deberás asegurar que el
@@ -106,7 +105,7 @@
         <h3 class="i18n" data-es="MODO HISTORIA" data-en="STORY MODE">MODO HISTORIA</h3>
         <p class="i18n"
           data-es="Enfréntate a una progresión lineal de 7 noches donde la agresividad y el instinto de los entes evolucionan. Cada hora cuenta hacia tu supervivencia."
-          data-en="Endure a linear 7-night progression where the entities' aggression and instincts evolve. Every hour counts towards your survival.">
+          data-en="Survive a 7-night linear progression as the entities' aggression and instincts grow increasingly lethal. Every hour marks your struggle for survival.">
           Enfréntate a una progresión lineal de 7 noches donde la agresividad y el instinto de los entes evolucionan.
           Cada hora cuenta hacia tu supervivencia.</p>
       </div>
@@ -114,7 +113,7 @@
         <h3 class="i18n" data-es="IDENTIFICACIÓN" data-en="IDENTIFICATION">IDENTIFICACIÓN</h3>
         <p class="i18n"
           data-es="Utiliza herramientas avanzadas: EMF Nivel 5, Caja Espectral, Termómetros y Cámaras de Visión Nocturna para catalogar a 24 entidades."
-          data-en="Utilize advanced tools: Level 5 EMF, Spirit Box, Thermometers, and Night Vision Cameras to catalog 24 distinct entities.">
+          data-en="Deploy high-tech investigative gear, including EMF Level 5, Spirit Boxes, and Night Vision Cameras to identify and catalog 24 unique entities.">
           Utiliza herramientas avanzadas: EMF Nivel 5, Caja Espectral, Termómetros y Cámaras de Visión Nocturna para
           catalogar a 24 entidades.</p>
       </div>
@@ -122,7 +121,7 @@
         <h3 class="i18n" data-es="ECONOMÍA" data-en="ECONOMY">ECONOMÍA</h3>
         <p class="i18n"
           data-es="Gana créditos por cada turno completado. Invierte en personalización para tu sala de seguridad o adquiere peluches coleccionables."
-          data-en="Earn credits for every shift completed. Invest in security room customization or collect exclusive plushies.">
+          data-en="Earn credits for every shift survived. Invest in security room upgrades or collect exclusive trophies and collectibles.">
           Gana créditos por cada turno completado. Invierte en personalización para tu sala de seguridad o adquiere
           peluches coleccionables.</p>
       </div>
@@ -139,7 +138,7 @@
       </div>
       <div class="gallery-item hidden-scroll">
         <img src="assets/images/P2.jpg" alt="Personalización coqueta">
-        <span class="i18n" data-es="PERSONALIZACIÓN COQUETA" data-en="COQUETTE CUSTOMIZATION">PERSONALIZACIÓN
+        <span class="i18n" data-es="PERSONALIZACIÓN COQUETA" data-en="COQUETTE STYLE">PERSONALIZACIÓN
           COQUETA</span>
       </div>
       <div class="gallery-item hidden-scroll">
