--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- Trailer Section -->
   <section id="trailer">
     <div class="trailer-container hidden-scroll">
-      <video loop playsinline controls class="trailer-video">
+      <video loop playsinline controls controlslist="nodownload" disablePictureInPicture class="trailer-video">
         <source src="assets/videos/trailer3.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
       </video>
