--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         rápido.
       </p>
       <div class="hero-btns">
-        <a href="https://forms.gle/S1Cbd5XdrAQvpEEp8" class="btn-primary i18n" data-es="INICIAR OPERACIÓN"
-          data-en="BEGIN OPERATION">INICIAR OPERACIÓN</a>
+        <a href="https://forms.gle/S1Cbd5XdrAQvpEEp8" class="btn-primary i18n" data-es="BETA CERRADA"
+          data-en="CLOSED BETA">BETA CERRADA</a>
       </div>
     </div>
   </section>
