--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <li><a href="#contact" class="i18n" data-es="Contacto" data-en="Contact">Contacto</a></li>
       </ul>
     </nav>
+    <div class="mobile-menu-btn" id="mobile-menu-btn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <div class="lang-switcher">
       <button class="lang-btn active" data-lang="es">ES</button>
       <span class="lang-divider">|</span>
