--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 
   <!-- Navigation -->
   <header id="header">
-    <a href="#" class="logo">
-      <img src="assets/images/logo.png" alt="Contención: Psiquiátrico" style="height: 40px; width: auto;">
-    </a>
     <nav>
       <ul>
         <li><a href="#hero" class="i18n" data-es="Inicio" data-en="Home">Inicio</a></li>
@@ -58,6 +55,15 @@
     </div>
   </section>
 
+  <!-- Steam Widget Section -->
+  <section id="steam">
+    <div class="steam-container hidden-scroll">
+      <iframe
+        src="https://store.steampowered.com/widget/4313860/?t=Siete%20noches%20para%20mantener%20la%20cordura%20frente%20a%20veinticuatro%20fantasmas%2C%20podr%C3%A1s%20hacerlo%3F"
+        frameborder="0" width="646" height="190"></iframe>
+    </div>
+  </section>
+
   <!-- Introduction/Lore Section -->
   <section id="intro">
     <div class="intro-container hidden-scroll">
@@ -92,7 +98,7 @@
   <section id="trailer">
     <div class="trailer-container hidden-scroll">
       <video loop playsinline controls controlslist="nodownload" disablePictureInPicture class="trailer-video">
-        <source src="assets/videos/trailer3.mp4" type="video/mp4">
+        <source src="assets/videos/trailer.mp4" type="video/mp4">
         Tu navegador no soporta el elemento de video.
       </video>
     </div>
@@ -186,7 +192,7 @@
     <div class="footer-content hidden-scroll">
       <p class="i18n" data-es="Copyright &copy; 2026 Rodrigo David Cañas Pérez & RCG. Todos los derechos reservados."
         data-en="Copyright &copy; 2026 Rodrigo David Cañas Pérez & RCG. All rights reserved.">
-        Copyright &copy; 2026 Rodrigo David Cañas Pérez & RCG. Todos los derechos reservados.
+        Copyright &copy; 2026 Rodrigo David Cañas Pérez. Todos los derechos reservados.
       </p>
       <div class="footer-btns">
         <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
