--- a/index.html
+++ b/index.html
@@ -101,19 +101,17 @@
       <div class="trailer-item">
         <h3 class="i18n" data-es="TRÁILER OFICIAL" data-en="OFFICIAL TRAILER">TRÁILER OFICIAL</h3>
         <div class="trailer-container">
-          <video loop playsinline controls controlslist="nodownload" disablePictureInPicture class="trailer-video">
-            <source src="assets/videos/trailer.mp4" type="video/mp4">
-            Tu navegador no soporta el elemento de video.
-          </video>
+          <iframe src="https://www.youtube-nocookie.com/embed/Fo7r23ZO98o" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </div>
       <div class="trailer-item">
         <h3 class="i18n" data-es="TEASER DE LANZAMIENTO" data-en="LAUNCH TEASER">TEASER DE LANZAMIENTO</h3>
         <div class="trailer-container">
-          <video loop playsinline controls controlslist="nodownload" disablePictureInPicture class="trailer-video">
-            <source src="assets/videos/trailer2.mp4" type="video/mp4">
-            Tu navegador no soporta el elemento de video.
-          </video>
+          <iframe src="https://www.youtube-nocookie.com/embed/o-uyXchVuvo" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </div>
     </div>
