--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="#equipment" class="i18n" data-es="Equipamiento" data-en="Equipment">Equipamiento</a></li>
         <li><a href="#cameras" class="i18n" data-es="Cámaras" data-en="Cameras">Cámaras</a></li>
         <li><a href="#contact" class="i18n" data-es="Contacto" data-en="Contact">Contacto</a></li>
+        <li><a href="home.html" class="i18n" data-es="Terminal" data-en="Terminal">Terminal</a></li>
       </ul>
     </nav>
     <div class="mobile-menu-btn" id="mobile-menu-btn">
@@ -203,14 +204,22 @@
   <!-- Footer -->
   <footer id="contact">
     <div class="footer-content hidden-scroll">
-      <p class="i18n" data-es="Copyright &copy; 2026 Rodrigo David Cañas Pérez & RCG. Todos los derechos reservados."
-        data-en="Copyright &copy; 2026 Rodrigo David Cañas Pérez & RCG. All rights reserved.">
+      <p class="i18n" data-es="Copyright &copy; 2026 Rodrigo David Cañas Pérez. Todos los derechos reservados."
+        data-en="Copyright &copy; 2026 Rodrigo David Cañas Pérez. All rights reserved.">
         Copyright &copy; 2026 Rodrigo David Cañas Pérez. Todos los derechos reservados.
       </p>
       <div class="footer-btns">
         <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
         <script
           type='text/javascript'>kofiwidget2.init('Donación', '#f57873', 'W7W81ROTXL'); kofiwidget2.draw();</script>
+      </div>
+      <div class="footer-social">
+        <a href="https://github.com/RodrigoDCP" target="_blank" class="social-link"><i
+            class="ph ph-github-logo"></i></a>
+        <a href="https://www.youtube.com/@COPS-i2d" target="_blank" class="social-link"><i
+            class="ph ph-youtube-logo"></i></a>
+        <a href="https://www.instagram.com/keny_hdr?igsh=aXVrbmIwcGs1aHQ1" target="_blank" class="social-link"><i
+            class="ph ph-instagram-logo"></i></a>
       </div>
     </div>
   </footer>
