Implementación: Cursos IA Studio

--- a/RodrigoDCP.html
+++ b/RodrigoDCP.html
@@ -71,7 +71,6 @@
     class="fixed top-0 w-full z-50 glass-panel border-b border-gray-200 dark:border-gray-800 transition-colors duration-500">
     <div class="max-w-4xl mx-auto px-6 h-16 flex items-center justify-between">
       <a href="home.html" class="flex items-center gap-2 text-sm font-medium hover:opacity-70 transition-opacity">
-        <i class="ph ph-arrow-left"></i> Volver a Terminal
       </a>
       <div class="flex items-center gap-4">
         <button id="theme-toggle" class="p-2 rounded-full hover:bg-gray-200 dark:hover:bg-gray-800 transition-colors">
@@ -193,6 +192,38 @@
       </div>
     </section>
 
+
+    <!-- Mis Proyectos -->
+    <section class="mb-16">
+      <h2 class="text-sm font-bold uppercase tracking-widest text-gray-400 mb-6 flex items-center gap-2">
+        <i class="ph ph-briefcase text-crt"></i> Mis proyectos
+      </h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <!-- IA Studio Card -->
+        <div
+          class="group bg-white dark:bg-dark-800 p-6 rounded-3xl border border-gray-200 dark:border-gray-800 hover:border-crt/20 transition-all flex flex-col justify-between">
+          <div>
+            <div class="w-10 h-10 bg-black rounded-lg flex items-center justify-center mb-4">
+              <i class="ph-fill ph-zap text-white text-lg"></i>
+            </div>
+            <h3 class="text-xl font-bold mb-2">IA Studio</h3>
+            <p class="text-sm text-gray-500 dark:text-gray-400 mb-6 leading-relaxed">
+              Academia personalizada para el dominio de herramientas de IA, NotebookLM y flujos de trabajo avanzados.
+            </p>
+          </div>
+          <a href="portafolio/cursos.html"
+            class="inline-flex items-center gap-2 text-crt font-medium text-sm hover:underline">
+            Acceder a la Academia <i class="ph ph-arrow-right"></i>
+          </a>
+        </div>
+
+        <!-- Placeholder -->
+        <div
+          class="border-2 border-dashed border-gray-100 dark:border-gray-900 rounded-3xl flex items-center justify-center p-6 grayscale">
+          <p class="text-xs text-gray-400 font-medium">Próximamente...</p>
+        </div>
+      </div>
+    </section>
 
     <!-- Footer Estándar -->
     <footer class="pt-16 border-t border-gray-200 dark:border-gray-800 text-center">
