--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
       <div class="trailer-item">
         <h3 class="i18n" data-es="TRÁILER OFICIAL" data-en="OFFICIAL TRAILER">TRÁILER OFICIAL</h3>
         <div class="trailer-container">
-          <iframe src="https://www.youtube-nocookie.com/embed/Fo7r23ZO98o" frameborder="0"
+          <iframe src="https://www.youtube-nocookie.com/embed/8kmRsapEO-k" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
       </div>
       <div class="trailer-item">
-        <h3 class="i18n" data-es="TEASER DE LANZAMIENTO" data-en="LAUNCH TEASER">TEASER DE LANZAMIENTO</h3>
+        <h3 class="i18n" data-es="TEASER DE LANZAMIENTO" data-en="LAUNCH TEASER">TEASER DE DESAFÍOS</h3>
         <div class="trailer-container">
           <iframe src="https://www.youtube-nocookie.com/embed/o-uyXchVuvo" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
