YouTube: Contenido Nuevo

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         </div>
       </div>
       <div class="trailer-item">
-        <h3 class="i18n" data-es="TEASER DE LANZAMIENTO" data-en="LAUNCH TEASER">TEASER DE DESAFÍOS</h3>
+        <h3 class="i18n" data-es="NUEVO CONTENIDO" data-en="NEW CONTENT">NUEVO CONTENIDO</h3>
         <div class="trailer-container">
-          <iframe src="https://www.youtube-nocookie.com/embed/o-uyXchVuvo" frameborder="0"
+          <iframe src="https://www.youtube-nocookie.com/embed/EKGli238DRU" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
         </div>
