--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contención: Psiquiátrico - Sitio Oficial</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://unpkg.com/@phosphor-icons/web"></script>
 </head>
 
 <body>
@@ -179,7 +180,7 @@
         <span class="i18n" data-es="TERMÓMETRO Y EMF 5" data-en="THERMOMETER & EMF 5">TERMÓMETRO Y EMF 5</span>
       </div>
       <div class="gallery-item hidden-scroll">
-        <img src="assets/images/H2.jpg" alt="Caja espectral y cruz">
+        <img src="assets/images/terminalNew.jpg" alt="Caja espectral y cruz">
         <span class="i18n" data-es="CAJA ESPECTRAL Y CRUZ" data-en="SPIRIT BOX & CRUCIFIX">CAJA ESPECTRAL Y CRUZ</span>
       </div>
     </div>
@@ -195,8 +196,26 @@
         <span class="i18n" data-es="MONITOREO TÁCTICO" data-en="TACTICAL MONITORING">MONITOREO TÁCTICO</span>
       </div>
       <div class="gallery-item hidden-scroll">
-        <img src="assets/images/C2.jpg" alt="Visión Nocturna">
+        <img src="assets/images/C2New.jpg" alt="Visión Nocturna">
         <span class="i18n" data-es="VISIÓN NOCTURNA" data-en="NIGHT VISION">VISIÓN NOCTURNA</span>
+      </div>
+    </div>
+  </section>
+
+  <!-- Developer Section -->
+  <section id="developer">
+    <h2 class="section-title hidden-scroll i18n" data-es="DESARROLLADOR" data-en="DEVELOPER">DESARROLLADOR</h2>
+    <div class="developer-card hidden-scroll">
+      <div class="dev-image-container">
+        <img src="assets/images/image2.jpeg" alt="Rodrigo D. Cañas Pérez">
+      </div>
+      <div class="dev-info">
+        <h3 class="dev-name">Rodrigo D. Cañas Pérez</h3>
+        <p class="i18n"
+          data-es="Nuevo en el Game Dev, amante de la ciberseguridad y entusiasta de siempre aprender cosas nuevas"
+          data-en="New to Game Dev, cybersecurity enthusiast, and always eager to learn new things">
+          Nuevo en el Game Dev, amante de la ciberseguridad y entusiasta de siempre aprender cosas nuevas
+        </p>
       </div>
     </div>
   </section>
@@ -209,7 +228,6 @@
         Copyright &copy; 2026 Rodrigo David Cañas Pérez. Todos los derechos reservados.
       </p>
       <div class="footer-btns">
-        <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script>
         <script
           type='text/javascript'>kofiwidget2.init('Donación', '#f57873', 'W7W81ROTXL'); kofiwidget2.draw();</script>
       </div>
